--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,9 @@
 <h1>Keikkakalenteri</h1>
 {% if session.username %}
 <p>You are logged in as {{ session.username }}</p>
+{% if isAdmin %}
 <a href="/add_new_user">Add a new user</a>
+{% endif %}
 <a href="/logout">Log out</a>
 {% else %}
 <form action="/login" method="POST">
@@ -12,7 +14,7 @@
 <input type="password" name="password"></p>
 <input type="submit" value="Login">
 {% if error %}
-<p class=error><strong>Error:</strong> {{ error }}
+<p class=error><strong>Error:</strong> {{ error }} </p>
 {% endif %}
 </form>
 {% endif %}
