Toimivat tekijät keikoissa

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,7 @@
 <title>Keikkakalenteri</title>
 <h1>Keikkakalenteri</h1>
 {% if session.username %}
-<p>You are logged in as {{ session.username }}</p>
-{% if isAdmin %}
-<a href="/add_new_user">Add a new user</a>
-{% endif %}
-<a href="/logout">Log out</a>
+<meta http-equiv="refresh" content="0; URL=/main" />
 {% else %}
 <form action="/login" method="POST">
 <p>Username:<br>
