--- a/templates/add_new_job.html
+++ b/templates/add_new_job.html
@@ -1,6 +1,8 @@
 <title>Keikkakalenteri</title>
 <h1>Keikkakalenteri</h1>
 
+<a href="/main">Return to mainpage</a>
+
 <form action="/createJob" method="POST">
   <p>Event name:<br>
   <input type="text" name="name"></p>
