--- a/templates/add_new_job.html
+++ b/templates/add_new_job.html
@@ -1,24 +1,25 @@
-<title>Keikkakalenteri</title>
-<h1>Keikkakalenteri</h1>
+{% extends "layout.html" %}
+{% block content %}
+  <a href="/main">Return to mainpage</a>
 
-<a href="/main">Return to mainpage</a>
+  <form action="/createJob" method="POST">
+    <p>Event name:<br>
+    <input type="text" name="name"></p>
+    <p>Time:<br>
+    <input type="datetime-local" name="time"></p>
+    <p>Location:<br>
+    <input type="text" name="location"></p>
 
-<form action="/createJob" method="POST">
-  <p>Event name:<br>
-  <input type="text" name="name"></p>
-  <p>Time:<br>
-  <input type="datetime-local" name="time"></p>
-  <p>Location:<br>
-  <input type="text" name="location"></p>
+    <p>Participants:<br>
+    {% for participant in participants %}
+      <input type="checkbox" id="participant{{ participant[0] }}" name="participants" value="{{ participant[0] }}">
+      <label for="participant{{ participant[0] }}"> {{ participant[1] }}</label><br>
+    {% endfor %}
+    <input type="submit" value="Create" class="mdc-button foo-button">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
+  </form>
 
-  <p>Participants:<br>
-  {% for participant in participants %}
-    <input type="checkbox" id="participant{{ participant[0] }}" name="participants" value="{{ participant[0] }}">
-    <label for="participant{{ participant[0] }}"> {{ participant[1] }}</label><br>
-  {% endfor %}
-  <input type="submit" value="Create">
-</form>
-
-{% if error %}
-<p class=error><strong>Error:</strong> {{ error }} </p>
-{% endif %}
+  {% if error %}
+  <p class=error><strong>Error:</strong> {{ error }} </p>
+  {% endif %}
+{% endblock %}
