--- a/templates/add_new_user.html
+++ b/templates/add_new_user.html
@@ -1,5 +1,5 @@
-<title>Keikkakalenteri</title>
-<h1>Keikkakalenteri</h1>
+{% extends "layout.html" %}
+{% block content %}
 
 <a href="/main">Return to mainpage</a>
 
@@ -18,8 +18,10 @@
   <p>Confirm password:<br>
   <input type="text" name="passwordConf"></p>
   <input type="submit" value="Add">
+  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 
 {% if error %}
 <p class=error><strong>Error:</strong> {{ error }} </p>
 {% endif %}
+{% endblock %}
