--- a/templates/edit_job.html
+++ b/templates/edit_job.html
@@ -1,5 +1,5 @@
-<title>Keikkakalenteri</title>
-<h1>Keikkakalenteri</h1>
+{% extends "layout.html" %}
+{% block content %}
 
 <a href="/main">Return to mainpage</a>
 
@@ -17,8 +17,10 @@
     <label for="participant{{ participant[0] }}"> {{ participant[1] }}</label><br>
   {% endfor %}
   <input type="submit" value="Update">
+  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 
 {% if error %}
 <p class=error><strong>Error:</strong> {{ error }} </p>
 {% endif %}
+{% endblock %}
