--- a/templates/main.html
+++ b/templates/main.html
@@ -1,15 +1,25 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+{% extends "layout.html" %}
+{% block content %}
 
-<title>Keikkakalenteri</title>
-<h1>Keikkakalenteri</h1>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
 {% if session.username %}
   <p>You are logged in as {{ name }}</p>
-  {% if isAdmin %}
-    <a href="/add_new_user">Add a new user</a>
-    <a href="/jobEditor">Add a new event</a>
-  {% endif %}
-  <a href="/logout">Log out</a>
+  <nav class="navbar navbar-expand-sm">
+    <ul class="navbar-nav">
+      {% if isAdmin %}
+        <li class="nav-item">
+          <a class="nav-link" href="/add_new_user">Add a new user</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/jobEditor">Add a new event</a>
+        </li>
+      {% endif %}
+      <li class="nav-item">
+        <a class="nav-link" href="/logout">Log out</a>
+      </li>
+    </ul>
+  </nav>
   <h2>Keikat käyttäjälle {{ name }}:</h2>
   <table>
     <tr>
@@ -58,3 +68,4 @@
 {% else %}
   <meta http-equiv="refresh" content="0; URL=/" />
 {% endif %}
+{% endblock %}
