--- a/templates/edit_job.html
+++ b/templates/edit_job.html
@@ -9,7 +9,13 @@
   <p>Time:<br>
   <input type="datetime-local" name="time" value="{{ job[2] }}"></p>
   <p>Location:<br>
-  <input type="text" name="location" value="{{ job[3] }}"></p>
+  <input type="text" list=locations name="location" value="{{ job[3] }}">
+  <datalist id="locations">
+    {% for location in locations %}
+      <option value="{{ location[1] }}">
+    {% endfor %}
+  </datalist>
+  </p>
 
   <p>Participants:<br>
   {% for participant in participants %}
