autocompleteja pois päältä

--- a/templates/add_new_job.html
+++ b/templates/add_new_job.html
@@ -2,7 +2,7 @@
 {% block content %}
   <a href="/main">Return to mainpage</a>
 
-  <form action="/createJob" method="POST">
+  <form action="/createJob" method="POST" autocomplete="off">
     <p>Event name:<br>
     <input type="text" name="name"></p>
     <p>Time:<br>
