--- a/templates/add_new_user.html
+++ b/templates/add_new_user.html
@@ -3,7 +3,7 @@
 
 <a href="/main">Return to mainpage</a>
 
-<form action="/register" method="POST">
+<form action="/register" method="POST" autocomplete="off">
   <p>Name:<br>
   <input type="text" name="name"></p>
   <label for="usergroup">Usergroup:</label>
