--- a/templates/edit_job.html
+++ b/templates/edit_job.html
@@ -3,7 +3,7 @@
 
 <a href="/main">Return to mainpage</a>
 
-<form action="/updateJob?event={{ job[0] }}" method="POST">
+<form action="/updateJob?event={{ job[0] }}" method="POST" autocomplete="off">
   <p>Event name:<br>
   <input type="text" name="name" value="{{ job[1] }}"></p>
   <p>Time:<br>
